--- a/studer/studerB.html
+++ b/studer/studerB.html
@@ -44,7 +44,7 @@
   Foto (86, 89) – berichtet von der Kritik am <a href="https://de.wikipedia.org/wiki/Kongress_der_Völker_des_Ostens" target="_blank">Kongress der Völker des Ostens</a> 1920 in Baku (132).</li>
   <li><a href="https://en.wikipedia.org/wiki/Roger_Nash_Baldwin" target="_blank"><strong>Baldwin, Roger</strong></a> (1884–1981) 266, 272 <br />
   Amerikanischer Bürgerrechtler, Mitgründer der
-  <a href="https://de.wikipedia.org/wiki/American_Civil_Liberties_Union" target="_blank">American Civil Liberties Union</a> (ACLU), Teilnehmer am »<a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus#Brüsseler_Kongress" target="_blank">Brüsseler Kongress</a> gegen koloniale Unterdrückung und Imperialismus« 1927.</li>
+  <a href="https://de.wikipedia.org/wiki/American_Civil_Liberties_Union" target="_blank">American Civil Liberties Union</a> (ACLU), Teilnehmer am »<a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus#Brüsseler_Kongress" target="_blank">Brüsseler Kongress</a> gegen koloniale Unterdrückung und Imperialismus« 1927 (266, 272).</li>
   <li><strong>Bamatter, Siegfried</strong> (Sigi) (1892–1966) 68, 170, 191, 231, 537 <br />
 Schweizer Kommunist; Teilnehmer am II. Weltkongress der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a>
 (68) – Funktionär beim Westeuropäischen Büro (WEB) (170) – später
@@ -58,7 +58,9 @@ Karriere in der Sowjetunion (191); siehe auch
   <li><span id="barbusse"></span><a href="https://de.wikipedia.org/wiki/Henri_Barbusse" target="_blank"><strong>Barbusse, Henri</strong></a> 
   (1873–1935) 208, 252, 266, 267, 275, 367, 395, 399, 400, 407, 464 <br />
   Französischer Schriftsteller, Präsident des <em>Comité Pro-Hindou</em> (208, 252) –
-  Teilnehmer am »<a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus#Brüsseler_Kongress" target="_blank">Brüsseler Kongress</a> gegen koloniale Unterdrückung und Imperialismus« 1927, Präsident des von
+  Teilnehmer am »<a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus#Brüsseler_Kongress" target="_blank">Brüsseler Kongress</a> gegen koloniale Unterdrückung und Imperialismus« 1927 (267) –<br />
+  Mitglied des Ehrenpräsidiums der <a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus" target="_blank">Liga gegen Imperialismus und für nationale Unabhängigkeit</a> (275) – 
+  Präsident des von
   <a href="studerM#münzenberg">→Münzenberg</a> organisierten internationalen
   Verteidigungskomitees für die in China verhafteten
   Komintern-Funktionäre <a href="studerM#moiseenko">→Tatjana
@@ -81,7 +83,7 @@ Karriere in der Sowjetunion (191); siehe auch
   Amerikanischer Journalist, der Fotos beisteuerte zum Bericht „Bei dem
   Rebellengeneral Sandino“ von <a href="studerS#sulzbachner">→Fritz
   Sulzbachner</a> in der
-  <a href="https://de.wikipedia.org/wiki/Arbeiter-Illustrierte-Zeitung" target="_blank"><em>AIZ</em></a>.</li>
+  <a href="https://de.wikipedia.org/wiki/Arbeiter-Illustrierte-Zeitung" target="_blank"><em>AIZ</em></a> (276).</li>
   <li><a href="https://de.wikipedia.org/wiki/Johannes_R._Becher" target="_blank"><strong>Becher, Johannes</strong></a>
   (1891–1958) 464 <br />
   Organisator der <em>Internationalen Schriftstellervereinigung zur Verteidigung der Kultur</em>.</li>
@@ -245,8 +247,8 @@ Heft 3.</li>
   Schweizer Kommunist, später Sozialdemokrat; Schweizer Delegierter beim II. Weltkongress der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> (64, 72, 79).</li>
   <li><a href="https://de.wikipedia.org/wiki/Fenner_Brockway" target="_blank"><strong>Brockway, Fenner</strong></a>
   (1888–1988) 268 <br />
-  Als Generalsekretär der britischen
-  <a href="https://de.wikipedia.org/wiki/Independent_Labour_Party" target="_blank">Independent Labour Party</a> Teilnehmer am »<a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus#Brüsseler_Kongress" target="_blank">Brüsseler Kongress</a> gegen koloniale Unterdrückung und Imperialismus« 1927.</li>
+  Generalsekretär der britischen
+  <a href="https://de.wikipedia.org/wiki/Independent_Labour_Party" target="_blank">Independent Labour Party</a>; Teilnehmer am »<a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus#Brüsseler_Kongress" target="_blank">Brüsseler Kongress</a> gegen koloniale Unterdrückung und Imperialismus« 1927 (268) – Foto (268).</li>
   <li><strong>Broido, Rosa</strong> <a href="studerM#meyer-levine">→Meyer-Leviné, Rosa</a></li>
   <li><span id="bronska"></span><a href="https://de.wikipedia.org/wiki/Wanda_Brońska" target="_blank"><strong>Brońska, Wanda</strong></a> (1911–1972) 449–451 <br />
   Geliebte von <a href="studerK#kurella">→Heinrich Kurella</a>, die mit ihm
@@ -303,7 +305,7 @@ Heft 3.</li>
   435–437, 440, 441, 443, 449, 450, 451, 530, 543, 549 <br />
   Deutsche Kommunistin, später Publizistin; Mitarbeiterin der
   <a href="https://de.wikipedia.org/wiki/Inprekorr" target="_blank">Inprekorr</a> (183ff) – Foto (183) – Partnerin von <a href="studerN#neumann">→Heinz Neumann</a> (191, 194) – 
-  Teilnehmerin am »<a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus#Brüsseler_Kongress" target="_blank">Brüsseler Kongress</a> gegen koloniale Unterdrückung und Imperialismus« 1927, auch im Auftrag
+  Teilnehmerin am »<a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus#Brüsseler_Kongress" target="_blank">Brüsseler Kongress</a> gegen koloniale Unterdrückung und Imperialismus« 1927 (270ff) - auch im Auftrag
   der
   <a href="https://de.wikipedia.org/wiki/Otdel_meschdunarodnych_swjasei" target="_blank">OMS</a> tätig, in Spanien für die Intwernationalen Brigaden tätig, 1933
   Emigration zusammen mit <a href="studerN#neumann">→Heinz Neumann</a> in
