--- a/studer/studerC.html
+++ b/studer/studerC.html
@@ -74,10 +74,10 @@
   Indischer anitkolonialistischer Journalist; Vertreter des Berliner
   Indischen Revolutionären Komitees in den Verhandlungen des Komitees
   mit der Komintern, in der Vertretung Indiens in Konflikt bei der
-  Komintern mit <a href="studerR#roy">→Roy</a> (119) –  später führendes
-  Mitglied der <a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus" target="_blank">Liga gegen Imperialismus und für nationale Unabhängigkeit</a>.
+  Komintern mit <a href="studerR#roy">→Roy</a> (119, 282) –  später führendes
+  Mitglied der <a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus" target="_blank">Liga gegen Imperialismus und für nationale Unabhängigkeit</a> (264f).
   Chatto wanderte 1931 in die
-  Sowjetunion aus, 1937 in Moskau verhaftet und erschossen.</li>
+  Sowjetunion aus (283) – 1937 in Moskau verhaftet und erschossen.</li>
   <li><strong>Chauvet, Jean</strong> »Jean Léar« (1903–?) 491, 492	<br />
   Sekretär der französischen
   <a href="https://fr.wikipedia.org/wiki/Secours_rouge_(France)" target="_blank">Secours rouge</a>.</li>
@@ -130,8 +130,8 @@
   negativ gezeichnet (517, 519f).</li>
   <li><a href="https://de.wikipedia.org/wiki/Rose_Cohen" target="_blank"><strong>Cohen, Rose</strong></a>
   (1894–1937) 281 <br />	
-  Britische Kommunistin, Frau von <a href="studerPQ#petrovskij">→David
-  Petrovskij</a>, arbeitete für die Komintern in Moskau.</li>
+  Britische Kommunistin; Frau von <a href="studerPQ#petrovskij">→David
+  Petrovskij</a>, arbeitete für die Komintern in Moskau (281).</li>
   <li><a href="https://de.wikipedia.org/wiki/Cyril_Connolly" target="_blank"><strong>Connolly, Cyril</strong></a>
   (1903–1974) 466	<br />
   Britischer Schriftsteller, während des Bürgerkriegs kurz in Spanien.</li>
