--- a/studer/studerD.html
+++ b/studer/studerD.html
@@ -84,7 +84,7 @@
   <a href="https://digitaltamiment.hosting.nyu.edu/s/cpoh/item/3962" target="_blank">biographische Angaben</a> im Katalog der NYU Libraries.</li>
   <li><strong>Dombrowski, Dora</strong>  279 <br />
   Deutsche Kommunistin, verheiratet mit dem chinesischen Kommunisten
-  <a href="studerL#liao">→Liao Huanxing</a>.</li>
+  <a href="studerL#liao">→Liao Huanxing</a> (279).</li>
   <li><strong>Donini, Olga</strong> 486 <br />
   Italienische Genossin, die den Sohn von <a href="studerN#noce">→Teresa
   Noce</a> aufnahm, als diese 1936 nach Spanien ging.</li>
@@ -101,9 +101,8 @@
   hemingway, Hemingway) den Kommentar schreib und sprach.</li>
   <li><a href="https://fr.wikipedia.org/wiki/Gabrielle_Duchêne" target="_blank"><strong>Duchêne, Gabrielle</strong></a>
   (1870–1954) 266, 272, 401 <br />
-  Französische feministische Pazifistin, Teilnehmerin am »<a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus#Brüsseler_Kongress" target="_blank">Brüsseler Kongress</a> gegen koloniale Unterdrückung und Imperialismus« 1927,
-  Präsidentin des Weltfrauenkomitees gegen Krieg und
-  Faschismus.</li>
+  Französische feministische Pazifistin; Teilnehmerin am »<a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus#Brüsseler_Kongress" target="_blank">Brüsseler Kongress</a> gegen koloniale Unterdrückung und Imperialismus« 1927 (266, 272) – 
+  Präsidentin des Weltfrauenkomitees gegen Krieg und Faschismus (401).</li>
   <li><a href="https://de.wikipedia.org/wiki/Jacques_Duclos" target="_blank"><strong>Duclos, Jacques</strong></a>
   (1896–1975) 167 <br />
   Französischer Kommunist; 1928 Verbindungsmann der <a href="https://de.wikipedia.org/wiki/Parti_communiste_français" target="_blank">PCF</a>
