--- a/studer/studerE.html
+++ b/studer/studerE.html
@@ -53,8 +53,10 @@
   (1879–1955) 234, 266, 275, 367 <br />
   Einstein unterrrichtete an der
   <a href="https://de.wikipedia.org/wiki/Marxistische_Arbeiterschule" target="_blank">Marxistischen Arbeiterschule</a> (MASCH) (234) –  sandte ein
-  Glückwunschschreiben an den »<a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus#Brüsseler_Kongress" target="_blank">Brüsseler Kongress</a> gegen koloniale Unterdrückung und Imperialismus« 1927 (266) -
-  war Mitglied des Ehrenpräsidiums der <a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus" target="_blank">Liga gegen Imperialismus und für nationale Unabhängigkeit</a> (275) –  untersützte <a href="studerM#münzenberg">→Münzenbergs</a> Kampagne zur Freilassung der in China verhafteten
+  Glückwunschschreiben an den »<a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus#Brüsseler_Kongress" target="_blank">Brüsseler Kongress</a> gegen koloniale Unterdrückung und Imperialismus« 1927 (266) - 
+  war Mitglied des Ehrenpräsidiums der <a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus" target="_blank">Liga gegen Imperialismus und für nationale Unabhängigkeit</a> (275) –
+  unterstützte <a href="studerM#münzenberg">→Münzenbergs</a> 
+  Kampagne zur Freilassung der in China verhafteten
   »Noulens« (tatsächlich <a href="studerR#rudnik">→Jakov Rudnik</a> und
   seine Frau <a href="studerM#moissenko">→Tat’jana Moissenko</a>) (367).</li>
   <li><strong>Eisler, Elfriede</strong> <a href="studerF#fischerr">→Fischer, Ruth</a></li>
@@ -71,15 +73,15 @@
   <a href="https://de.wikipedia.org/wiki/Die_Maßnahme_(Drama)" target="_blank"><em>Die
   Maßnahme</em></a> von <a href="studerB#brecht">→Brecht</a> (261).</li>
   <li><strong>El Bakri, Mazhar Bey</strong> 270 <br />
-  Syrischer Antikolonialist, Gast bei <a href="studerM#münzenberg">→Münzenberg</a> und
-  <a href="studerG#gross">→Gross</a>.</li>
+  Syrischer Antikolonialist; Gast bei <a href="studerM#münzenberg">→Münzenberg</a> und
+  <a href="studerG#gross">→Gross</a> (270).</li>
   <li><a href="https://de.wikipedia.org/wiki/Abd_al-Karim" target="_blank"><strong>El-Krim, Abd</strong></a> 
-  (1882–1963) 286 <br />
+  (1882–1963) 285 <br />
   Anführer des Aufstands der
   <a href="https://de.wikipedia.org/wiki/Rifkabylen" target="_blank">Rifkabylen</a>
-  gegen die spanische und französischen Konolialtruppen, beauftragte
-  <a href="studerM#mattar">→Mattar</a> mit Propganda für die
-  antikononialistische Sache.</li>
+  gegen die spanische und französischen Kolonialtruppen, beauftragte
+  <a href="studerM#mattar">→Mattar</a> mit Propaganda für die
+  antikononialistische Sache (285).</li>
   <li><a href="https://de.wikipedia.org/wiki/Adolf_Ende" target="_blank"><strong>Ende, Adolf</strong></a>
   (1899–1951) »Lex Bauer«, »Lex Ende« 414 <br />
   Deutscher Journalist, nach 1933 in der
