--- a/studer/studerF.html
+++ b/studer/studerF.html
@@ -53,11 +53,9 @@
   <a href="https://www.bundesstiftung-aufarbeitung.de/de/recherche/kataloge-datenbanken/biographische-datenbanken/friedrich-feyerherd" target="_blank">Kurzbiographie</a> im <em>Handbuch der Deutschen Kommunisten</em>.</li>
   <li><a href="https://de.wikipedia.org/wiki/Edo_Fimmen" target="_blank"><strong>Fimmen, Edo</strong></a> 
   (1882–1942) 275, 284 <br />
-  Niederländischer Gewerkschaftsfunktionär, Mitglied des
-  Exekutivkomitees der
-  <a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus" target="_blank">Liga
-  gegen Imperialismus und koloniale Unterdrückung</a>, wichtige Stütze von
-  <a href="studerM#münzenberg">→Münzenberg</a>.</li>
+  Niederländischer Gewerkschaftsfunktionär; Mitglied des
+  Exekutivkomitees der <a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus" target="_blank">Liga gegen Imperialismus und für nationale Unabhängigkeit</a> (275) – wichtige Stütze von
+  <a href="studerM#münzenberg">→Münzenberg</a> (284).</li>
   <li><span id="fischbach"></span><strong>Fischbach, Gertrude</strong> (1895–?) 366 <br />
   Frau von <a href="studerR#rüegg">→Paul Rüegg</a>.</li>
   <li><a href="https://de.wikipedia.org/wiki/Louis_Fischer_(Journalist)" target="_blank"><strong>Fischer, Louis</strong></a>
