--- a/studer/studerG.html
+++ b/studer/studerG.html
@@ -42,7 +42,7 @@
   (1887–1940) 273 <br />
   Der jamaikanische Panafrikanist Garvey hielt die Bezeichnung „Farbige“
   als vom Imperialismus eingebrachten Begriff, um zu spalten. „Neger“
-  hingegen bezeichnete die aufbegehrenden Unterdrückten.</li>
+  hingegen bezeichnete die aufbegehrenden Unterdrückten (273).</li>
   <li><a href="https://de.wikipedia.org/wiki/Pierre_G._Lévy" target="_blank"><strong>Gaspard Lévy, Pierre</strong></a>
   (1894–1945) 397 <br />
   Der Schweizer Verleger Gaspard Lévy verkaufte 1933 seinen Verlag
@@ -81,8 +81,13 @@
   <li><span id="gibarti"></span><strong>Gibarti, Louis</strong> (geb. Dodos, László) (1895–1967)
   »Alfred Feller«, »Felix Gasbarra«, »Wladislaus Kaminski« 264, 281,
   286, 287, 288, 366, 399, 401, 402 <br />
-  Stellvertreter und Vertrauensmann von <a href="studerM#münzenberg">→Willi Münzenberg</a>, maßgeblich am m4bruesselerk
-  beteiligt.</li>
+  Stellvertreter und Vertrauensmann von <a href="studerM#münzenberg">→Willi Münzenberg</a>, 
+  maßgeblich am »<a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus#Brüsseler_Kongress" target="_blank">Brüsseler Kongress</a> gegen koloniale Unterdrückung und Imperialismus« 1927 beteiligt (264ff) – Foto (287) – Koordinator der Kampagne
+  zur Freilassung der in China verhafteten
+  »Noulens« (tatsächlich <a href="studerR#rudnik">→Jakov Rudnik</a> und
+  seine Frau <a href="studerM#moissenko">→Tat’jana Moissenko</a>) (366) –
+  Sekretär des von <a href="studerM#münzeberg">→Münzenberg</a> gegründeten <em>Welthilfskomitees
+  für die Opfer des deutschen Faschismus</em> (401).</li>
   <li><a href="https://de.wikipedia.org/wiki/André_Gide" target="_blank"><strong>Gide, André</strong></a>
   (1869–1951)  501 <br />
   Französischer Schriftsteller, dessen kritisches Buch <em>Retouches à mon
@@ -108,6 +113,7 @@
   <li><strong>Goldenberg, Aron</strong> (1896–1993) 68 <br />
   Rumänischer Kommunist; als Jugendvertreter aus Frankreich Teilnehmer
   am II. Weltkongress der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> (68).</li>
+  <li><strong>Gómez, Manuel</strong> <a href="studerPQ#phillips">→Phillips, Charles Francis</a></li>
   <li><a href="https://de.wikipedia.org/wiki/Maxim_Gorki" target="_blank"><strong>Gorki, Maxim</strong></a>
   (1868–1936) 76, 79, 367 <br />
   Gorki entwarf Szenen zu einem Schauspiel über die Geschichte der
@@ -171,11 +177,11 @@
   viele Namen von Kommunisten preisga, was zu einer Verhaftungswelle
   führte.</li>
   <li><a href="https://de.wikipedia.org/wiki/Josiah_Tshangana_Gumede" target="_blank"><strong>Gumede, Josiah Tshangana</strong></a> (1867–1946) 267, 293 <br />
-  Südafrikanischer Teilnehmer am »<a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus#Brüsseler_Kongress" target="_blank">Brüsseler Kongress</a> gegen koloniale Unterdrückung und Imperialismus« 1927.</li>
+  Südafrikanischer Teilnehmer am »<a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus#Brüsseler_Kongress" target="_blank">Brüsseler Kongress</a> gegen koloniale Unterdrückung und Imperialismus« 1927 (267, 293).</li>
   <li><strong>Gural’skij, Avgust</strong> <a href="studerC#cheifec">→Abram Cheifec</a></li>
   <li><strong>Güssfeld, Käthe</strong> (1899–?) 271 <br />
-  Deutsche Kommunistin, Übersetzerin und Dolmetscherin für <a href="studerM#münzenberg">→Münzenberg</a>; siehe auch
-  <a href="https://www.bundesstiftung-aufarbeitung.de/de/recherche/kataloge-datenbanken/biographische-datenbanken/kaethe-guessfeld" target="_blank">Kurzbiographie</a> im <em>Handbuch der Deutschen Kommunisten</em>.</li>
+  Deutsche Kommunistin; Übersetzerin und Dolmetscherin für <a href="studerM#münzenberg">→Münzenberg</a> (271) – ging 1927 in die Sowjetuion, wo sie um Gulag ums Leben kam (271); siehe auch
+  <a href="https://www.bundesstiftung-aufarbeitung.de/de/recherche/kataloge-datenbanken/biographische-datenbanken/kaethe-guessfeld" target="_blank">Kurzbiographie</a> in: <em>Handbuch der Deutschen Kommunisten</em>.</li>
   <li><a href="https://de.wikipedia.org/wiki/Richard_Gyptner" target="_blank"><strong>Gyptner, Richard</strong></a>
   (1901–1972) »Alarich«, »Magnus« 167, 175, 191 <br />
   Deutscher Kommunist; Mitarbeiter des Westeuropäischen Büros der
