--- a/studer/studerK.html
+++ b/studer/studerK.html
@@ -71,7 +71,7 @@
   beisteuerte.</li>
   <li><a href="https://de.wikipedia.org/wiki/Sen_Katayama" target="_blank"><strong>Katayama, Sen</strong></a> 
   (1859–1933) 271 <br />
-  Japanischer Kommunist, Teilnehmer am »<a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus#Brüsseler_Kongress" target="_blank">Brüsseler Kongress</a> gegen koloniale Unterdrückung und Imperialismus« 1927.</li>
+  Japanischer Kommunist; Teilnehmer am »<a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus#Brüsseler_Kongress" target="_blank">Brüsseler Kongress</a> gegen koloniale Unterdrückung und Imperialismus« 1927 (271).</li>
   <li><span id="katz"></span><a href="https://de.wikipedia.org/wiki/Otto_Katz" target="_blank"><strong>Katz, Otto</strong></a>
   (1895–1952) »André Simone« »Simon« »Rudolf Breda« 402–406, 436, 454,
   466, 523, 543	<br />
@@ -179,9 +179,9 @@
   als „Konterrevolutionär“ denunziert.</li>
   <li><a href="https://de.wikipedia.org/wiki/Tiemoko_Garan_Kouyaté" target="_blank"><strong>Kouyaté,
   Tiemoko Garan</strong></a> (1902–1942) 273, 292, 533 <br />
-  Malischer Kommunist, zusammen mit <a href="studerS#senghor">→Senghor</a>
-  Gründer der <em>Ligue de Défense de la Race Nègre</em>; von den Nazis
-  ermordet.</li>
+  Malischer Kommunist; zusammen mit <a href="studerS#senghor">→Senghor</a>
+  Gründer der <em>Ligue de Défense de la Race Nègre</em> (273) –  von den Nazis
+  ermordet (533).</li>
   <li><a href="https://de.wikipedia.org/wiki/Siegfried_Kracauer" target="_blank"><strong>Kracauer,
   Siegfried</strong></a> (1889–1966) 261 <br />
   Kracauer äußerte sich zu <a href="studerS#seghers">→Anna Segher</a>s Roman
