--- a/studer/studerL.html
+++ b/studer/studerL.html
@@ -35,7 +35,7 @@
 
 <ul>
   <li><strong>La Guma, James</strong> (1894–1960) 267, 293 <br />
-  Südafrikanischer Kommunist, Teilnehmer am »<a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus#Brüsseler_Kongress" target="_blank">Brüsseler Kongress</a> gegen koloniale Unterdrückung und Imperialismus« 1927, siehe auch
+  Südafrikanischer Kommunist; Teilnehmer am »<a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus#Brüsseler_Kongress" target="_blank">Brüsseler Kongress</a> gegen koloniale Unterdrückung und Imperialismus« 1927 (267, 293); siehe auch
   <a href="https://www.sahistory.org.za/people/james-arnold-jimmy-la-guma" target="_blank">Kurzbiographie</a> auf South African History Online.</li>
   <li><strong>Landa, Matilde</strong> (1904–1942) 493, 498, 533<br />
   Spanische Kommunistin, die mit <a href="studerM#modotti">→Tina Modotti</a>
@@ -50,7 +50,8 @@
   ausgewiesen.</li>
   <li><a href="https://de.wikipedia.org/wiki/George_Lansbury" target="_blank"><strong>Lansbury, George</strong></a>
   (1859–1940) 266, 270, 275 <br />
-  Britischer Politiker der Labour Party, Teilnehmer am »<a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus#Brüsseler_Kongress" target="_blank">Brüsseler Kongress</a> gegen koloniale Unterdrückung und Imperialismus« 1927.</li>
+  Britischer Politiker der Labour Party, Teilnehmer am »<a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus#Brüsseler_Kongress" target="_blank">Brüsseler Kongress</a> gegen koloniale Unterdrückung und Imperialismus« 1927 (266, 270) – 
+  Vorsitzender des Exekutivkomitees der <a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus" target="_blank">Liga gegen Imperialismus und für nationale Unabhängigkeit</a> (275).</li>
   <li><a href="https://en.wikipedia.org/wiki/Lucien_Laurat" target="_blank"><strong>Laurat, Lucien</strong></a>
   (1898–1973) 67 <br />
   Österreichischer Marxist; Teilnehmer am II. Weltkongress der
@@ -109,15 +110,18 @@ Deutscher Seemann, in Shanghai als
   eingesetzt, 1930/31 wieder abgesetzt.</li>
   <li><span id="liao"></span><strong>Liao Huanxing</strong> (1895–1968) »Tang Xinshe« 268, 275, 278-281, 316, 
   317, 387, 543, 551 <br />
-  Chinesischer Kommunist, Vertreter des Zentralen Exekutivkomitees der
+  Chinesischer Kommunist; Vertreter des Zentralen Exekutivkomitees der
   <a href="https://de.wikipedia.org/wiki/Kuomintang" target="_blank">Guomindang</a> beim
-  »<a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus#Brüsseler_Kongress" target="_blank">Brüsseler Kongress</a> gegen koloniale Unterdrückung und Imperialismus« 1927, schrieb Artikel für 
-  <a href="https://de.wikipedia.org/wiki/Inprekorr" target="_blank">Inprekorr</a>.
+  »<a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus#Brüsseler_Kongress" target="_blank">Brüsseler Kongress</a> gegen koloniale Unterdrückung und Imperialismus« 1927 (268) - Foto (268) - 
+  Mitglied des Exekutivkomitees der <a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus" target="_blank">Liga gegen Imperialismus und für nationale Unabhängigkeit</a> (275, 278ff) –
+  schrieb Artikel für <a href="https://de.wikipedia.org/wiki/Inprekorr" target="_blank">Inprekorr</a> (280).
   <a href="studerS#seghers">→Anna Seghers</a> porträtierte Liao als
   veranwortungsvollen Revolutionär in ihrem Roman
   <a href="https://de.wikipedia.org/wiki/Die_Gefährten_(Seghers)" target="_blank"><em>Die
-  Gefährten</em></a>. 1938 wurde Liao Huanxing in der Sowjetunion zu Lagerhaft
-  verurteilt und kam erst 1949 wieder frei.</li>
+  Gefährten</em></a> (280) – bezeichnete nach dem blutigen Coup 1927 in Shanghai 
+  Chiang Kai-shek als »Volksverräter« (316f). 1938 wurde Liao Huanxing
+  in der Sowjetunion zu Lagerhaft verurteilt und kam erst 1949 wieder
+  frei (543).</li>
   <li><a href="https://fr.wikipedia.org/wiki/Zlata_Lilina" target="_blank"><strong>Lilina, Zina</strong></a> (1882–1929) 
   79 <br />
   Russische Kommunistin; Frau von <a href="studerZ#zinovev">→Zinov’ev</a> (79) – Foto (79)</li>
@@ -127,7 +131,7 @@ Deutscher Seemann, in Shanghai als
   <li><span id="lominadze"></span><a href="https://de.wikipedia.org/wiki/Bessarion_Lominadse" target="_blank"><strong>Lominadze, Vissarion (Besso)</strong></a>	(1897-1934) »Albrecht«, »Werner« 168,
   270, 271, 329, 330, 331, 436, 444 <br />
   Georgischer Kommunist, Emissär der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> in Deutschland 1925/26 (168) –
-  Teilnehmer am »<a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus#Brüsseler_Kongress" target="_blank">Brüsseler Kongress</a> gegen koloniale Unterdrückung und Imperialismus« 1927; in China mit 
+  Teilnehmer am »<a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus#Brüsseler_Kongress" target="_blank">Brüsseler Kongress</a> gegen koloniale Unterdrückung und Imperialismus« 1927 (270) –  in China mit 
   <a href="studerN#neumann">→Heinz Neumann</a> Organisator des Aufstands von
   Guangzhou 1927; beging im Dezember 1934 oder Januar 1935 Selbstmord.
   Heinz Neumann distanzierte sich 1936 vor der Internationalen
