--- a/studer/studerM.html
+++ b/studer/studerM.html
@@ -34,7 +34,7 @@
       <h2 id="m">M</h2>
 
 <ul>
-  <li><span id="machado"></span><a href="https://de.wikipedia.org/wiki/Gerardo_Machado" target="_blank"><strong>Machado, Gerardo</strong></a> (1871–1939) 524, 532 <br />
+  <li><span id="machado"></span><a href="https://de.wikipedia.org/wiki/Gerardo_Machado" target="_blank"><strong>Machado, Gerardo</strong></a> (1871–1939) 266, 524, 532 <br />
   Kubanischer Diktator; Auftraggeber der Ermordung von <a href="studerM#mella">→Julio Antonio Mella</a>.</li>
   <li><a href="https://en.wikipedia.org/wiki/William_McLaine" target="_blank"><strong>McLaine, William</strong></a>
   (1891–1960) 82 <br />
@@ -110,7 +110,7 @@ in Zentral- und Südchina aufbaute.</li>
   <em>Weltkomitees gegen Krieg und Faschismus</em>.</li>
   <li><a href="https://fr.wikipedia.org/wiki/Albert_Marteaux" target="_blank"><strong>Marteaux, Albert</strong></a>
   (1886–1949) 275 <br />
-  Belgischer Kommunist; Mitglied des Exekutivkomitees der <a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus" target="_blank">Liga gegen Imperialismus und für nationale Unabhängigkeit</a>.</li>
+  Belgischer Kommunist; Mitglied des Exekutivkomitees der <a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus" target="_blank">Liga gegen Imperialismus und für nationale Unabhängigkeit</a> (275).</li>
   <li><span id="marinez-cartonc"></span><strong>Martínez-Cartón, Carmen</strong> (geb. Ruth Kahn)
   (1905–?) 507, 512 <br />
   war für die Komintern in den 1930er Jahren in Spanien, zuständig für
@@ -120,7 +120,7 @@ in Zentral- und Südchina aufbaute.</li>
   <li><strong>Martínez-Cartón, Pedro</strong> (1905–1971) 507, 512	<br />
   Spanischer Kommunist, verheiratet mit <a href="studerM#martinez-cartonc">→Carmen</a>.</li>
   <li><strong>Martins, Carlos Deambrosis</strong> 267 <br />
-  Haitianischer Schriftsteller, Teilnehmer am »<a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus#Brüsseler_Kongress" target="_blank">Brüsseler Kongress</a> gegen koloniale Unterdrückung und Imperialismus« 1927.</li>
+  Haitianischer Schriftsteller; Teilnehmer am »<a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus#Brüsseler_Kongress" target="_blank">Brüsseler Kongress</a> gegen koloniale Unterdrückung und Imperialismus« 1927 (267).</li>
   <li><span id="marty"></span><a href="https://de.wikipedia.org/wiki/André_Marty_(Politiker)" target="_blank"><strong>Marty, André</strong></a> (1886–1956) 457, 458, 473, 474, 522, 524 <br />
   Französischer Kommunist; als Sekretär des EKKI in Spanien, politischer
   Leiter der
@@ -133,7 +133,7 @@ in Zentral- und Südchina aufbaute.</li>
   Schottischer Kommunist, 1928 nach Shanghai entsandt.</li>
   <li><span id="mattar"></span><strong>Mattar, Ahmed Hassan</strong> (1906–?) »Matar«, »Matari«
   278, 279, 285, 286 <br />
-  Sudanesischer Antikonialist, unterstützte die <a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus" target="_blank">Liga gegen Imperialismus und für nationale Unabhängigkeit</a>.</li>
+  Sudanesischer Antikonialist; unterstützte die <a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus" target="_blank">Liga gegen Imperialismus und für nationale Unabhängigkeit</a> (278ff).</li>
   <li><strong>Matzinger, Herta</strong> (1906–1985) 413 <br />
   Schweizer Kommunistin; Direktorin der Rundschau-Nachrichten-Agentur
   (RUNA), Nachfolgeorganisation der <em>Telegraphenagentur</em> von <a href="https://de.wikipedia.org/wiki/Inprekorr" target="_blank">Inprekorr</a>
@@ -144,7 +144,7 @@ in Zentral- und Südchina aufbaute.</li>
   gegen Krieg und Faschismus</em>.</li>
   <li><a href="https://de.wikipedia.org/wiki/James_Maxton" target="_blank"><strong>Maxton, James</strong></a>
   (1885–1946) 275 <br />
-  Britischer Labour-Politiker; Vorsitzender des Exekutivkomitess der <a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus" target="_blank">Liga gegen Imperialismus und für nationale Unabhängigkeit</a>.</li>
+  Britischer Labour-Politiker; Vorsitzender des Exekutivkomitess der <a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus" target="_blank">Liga gegen Imperialismus und für nationale Unabhängigkeit</a> (275).</li>
   <li><strong>Mayer, Konrad</strong> (1903–1983) 444 <br />
   Schweizer Kommunist; während des
   <a href="https://de.wikipedia.org/wiki/Moskauer_Prozesse#1._Prozess" target="_blank">Ersten Moskauer Schauprozesses</a> in Moskau; siehe auch
@@ -159,8 +159,8 @@ in Zentral- und Südchina aufbaute.</li>
   die imperialistische Poilit der USA und Großbritanniens gegenüber
   China anklagte (261).</li>
   <li><span id="mella"></span><a href="https://de.wikipedia.org/wiki/Julio_Antonio_Mella" target="_blank"><strong>Mella, Julio Antonio</strong></a> (geb. Nicanor McParland) (1903–1929) 266, 524, 532 <br />
-  Kubanischer Kommunist; Delegierter beim »<a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus#Brüsseler_Kongress" target="_blank">Brüsseler Kongress</a> gegen koloniale Unterdrückung und Imperialismus« 1927; Gefährte von
-  <a href="studerM#modotti">→Tina Modotti</a>, von Agenten 
+  Kubanischer Kommunist; Delegierter beim »<a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus#Brüsseler_Kongress" target="_blank">Brüsseler Kongress</a> gegen koloniale Unterdrückung und Imperialismus« 1927 (266) –  Gefährte von
+  <a href="studerM#modotti">→Tina Modotti</a> (266) – von Agenten 
   <a href="studerM#machado">→Machado</a>s 1929 im mexikanischen Exil erschossen.</li>
   <li><span id="meyer"></span><a href="https://de.wikipedia.org/wiki/Ernst_Meyer_(Politiker)" target="_blank"><strong>Meyer, Ernst</strong></a> (1887–1930) 39, 68, 343 <br />
   Deutscher Kommunist; verheiratet mit <a href="studerM#meyer-levine">→Rosa
@@ -230,7 +230,8 @@ in Zentral- und Südchina aufbaute.</li>
   <a href="https://de.wikipedia.org/wiki/Arbeiter-Illustrierte-Zeitung" target="_blank"><em>AIZ</em></a> (221) – schrieb für die
   <a href="https://de.wikipedia.org/wiki/Internationale_Rote_Hilfe" target="_blank">Internationale Rote Hilfe</a> einen programmatischen Artikel »<em>Photos
   als Waffe der RH-Agitation</em>« (221) -  liiert mit <a href="studerM#mella">→Julio
-  Antonio Mella</a>, wurde 1931 Mitglied der russischen KP, als faktische
+  Antonio Mella</a> (266) – Aktivistin des Komitees <em>¡Manos fuera de Nicaragua!</em> (276) –
+  wurde 1931 Mitglied der russischen KP (283) –  als faktische
   Leiterin der IRH für die Unterstützung der spanischen Republikaner
   zuständig, zunächst von Paris aus, dann in Spanien selbst,
   Teilnehmerin am Zweiten Internationalen Schriftstellerkongress zur
