--- a/studer/studerN.html
+++ b/studer/studerN.html
@@ -48,9 +48,10 @@
   <li><a href="https://de.wikipedia.org/wiki/Jawaharlal_Nehru" target="_blank"><strong>Nehru, Jawaharlal</strong></a>
   (1889–1964) 267, 283, 291, 329, 552 <br />
   Indischer antikolonialistischer Politiker; Teilnehmer am
-  »<a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus#Brüsseler_Kongress" target="_blank">Brüsseler Kongress</a> gegen koloniale Unterdrückung und Imperialismus« 1927, verließ die m4ligaimp nach der Linkswende der
-  <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> auf dem 6. Weltkongress, nahm an der Zehnjahresfeier der
-  russischen Revolution 1927 teil.</li>
+  »<a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus#Brüsseler_Kongress" target="_blank">Brüsseler Kongress</a> gegen koloniale Unterdrückung und Imperialismus« 1927 (267, 283) – 
+  verließ die <a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus" target="_blank">Liga gegen Imperialismus und für nationale Unabhängigkeit</a> nach der Linkswende der
+  <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> auf dem 6. Weltkongress (291) – nahm an der Zehnjahresfeier der
+  russischen Revolution 1927 teil (329).</li>
   <li><a href="https://de.wikipedia.org/wiki/Pablo_Neruda" target="_blank"><strong>Neruada, Pablo</strong></a>
   (1904–1973) 500 <br />
   Cilenischer Schriftsteller; Teilnehmer am Zweiten Internationalen
