--- a/studer/studerPQ.html
+++ b/studer/studerPQ.html
@@ -59,9 +59,10 @@
   Paris tätig (173).</li>
   <li><span id="petrovskij"></span><a href="https://en.wikipedia.org/wiki/David_Petrovsky" target="_blank"><strong>Petrovskij, David</strong></a> (1886–1937) »David Lipetz«, »David Goldfarb«,
   »A.J. Bennett«, »Isolde« 281, 288, 290	<br />
-  Petrovskij arbeitete für die <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a>, Organisator
+  Russisch-amerikanischer Kommunist;
+  arbeitete für die <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> (281) –  Organisator
   beim »<a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus#Brüsseler_Kongress" target="_blank">Brüsseler Kongress</a> gegen koloniale Unterdrückung und Imperialismus« 1927 an Stelle von 
-  <a href="studerR#roy">→Roy</a>.</li>
+  <a href="studerR#roy">→Roy</a> (290).</li>
   <li><strong>Pesch, Fritz</strong> 425 <br />
   Schweizer linker Sozialdemokrat, der die Kinder von <a href="studerK#komjati">→Irén</a> und 
   <a href="studerK#komjata">→Aladár Konját</a> bei sich
@@ -97,7 +98,7 @@
   Amerikanischer Kommunist; »Schwarzes Schaf einer wohlhabenden New
   Yorker Familie (60) –  Mitgründer der
   <a href="https://de.wikipedia.org/wiki/Partido_Comunista_Mexicano" target="_blank">Kommunistischen Partei Mexikos</a> (64) –  Teilnehmer des II. Weltkongresses
-  der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> (63, 78, 93) –  Teilnehmer am »<a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus#Brüsseler_Kongress" target="_blank">Brüsseler Kongress</a> gegen koloniale Unterdrückung und Imperialismus« 1927, Autor des Buchs
+  der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> (63, 78, 93) –  Teilnehmer am »<a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus#Brüsseler_Kongress" target="_blank">Brüsseler Kongress</a> gegen koloniale Unterdrückung und Imperialismus« 1927 (270ff) – Autor des Buchs
   <a href="https://autonomedia.org/product/it-had-to-be-revolution/" target="_blank"><em>It Had to be Revolution: Memoirs of an American Radical</em></a>, London
   1993.</li>
   <li><span id="pieck"></span><a href="https://de.wikipedia.org/wiki/Wilhelm_Pieck" target="_blank"><strong>Pieck,
