--- a/studer/studerR.html
+++ b/studer/studerR.html
@@ -175,7 +175,7 @@
   Amerikanerin; Frau von <a href="studerIJ#isaacs">→Harold R. Isaacs</a> und mit ihm in China.</li>
   <li><a href="https://de.wikipedia.org/wiki/Romain_Rolland" target="_blank"><strong>Rolland, Romain</strong></a>
   (1866–1944) 266 <br />
-  Französischer Schriftsteller; sandte Unterstützungstelegramm zum »<a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus#Brüsseler_Kongress" target="_blank">Brüsseler Kongress</a> gegen koloniale Unterdrückung und Imperialismus« 1927.</li>
+  Französischer Schriftsteller; sandte ein Unterstützungstelegramm zum »<a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus#Brüsseler_Kongress" target="_blank">Brüsseler Kongress</a> gegen koloniale Unterdrückung und Imperialismus« 1927 (266).</li>
   <li><a href="https://de.wikipedia.org/wiki/Alfred_Rosmer" target="_blank"><strong>Rosmer, Alfred</strong></a>
   (1977–1964) 63, 72, 76, 81, 85, 93, 94, 108, 111–113, 163, 329 <br />
   Französischer Kommunist; Teilnehmer am II. Weltkongress der
@@ -255,7 +255,7 @@
   <li><span id="rühle"></span><a href="https://de.wikipedia.org/wiki/Otto_Rühle_(Politiker,_1874)" target="_blank"><strong>Rühle, Otto</strong></a>
   (1874–1943) 276 <br />
   Deutscher Rätekommunist; einer der wenigen Linken, die Psychologie und
-  Marxismus verbinden wollten.</li>
+  Marxismus verbinden wollten (276).</li>
   <li><strong>Runge, Fritz</strong> (1893–1961) 185, 186, 191, 422 <br />
   Tschechischer Kommunist; Mitarbeiter der <a href="https://de.wikipedia.org/wiki/Inprekorr" target="_blank">Inprekorr</a> (185f) – in der
   Chefredaktion der <em>Rundschau</em>, der deutschen Ausgabe der Inprekorr nach
