--- a/studer/studerS.html
+++ b/studer/studerS.html
@@ -106,9 +106,9 @@
   Deutscher Kommunist; Mitautor des
   <a href="https://de.wikipedia.org/wiki/Braunbuch#Braunbuch_1933" target="_blank">Braunbuchs über Reichtagsbrand und Hitlerterror</a>.</li>
   <li><strong>Schudel, Otto</strong> (1902-1979)	278, 421 <br />
-  Schweizer Kommunist; arbeitete bei der <a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus" target="_blank">Liga gegen Imperialismus und für nationale Unabhängigkeit</a> mit, Herausgeber der
+  Schweizer Kommunist; arbeitete bei der <a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus" target="_blank">Liga gegen Imperialismus und für nationale Unabhängigkeit</a> mit (278) –  Herausgeber der
   <em>Rundschau über Politik, Wirtschaft und Arbeiterbewegung</em>, der
-  deutschen Ausgabe der <a href="https://de.wikipedia.org/wiki/Inprekorr" target="_blank">Inprekorr</a>; siehe auch
+  deutschen Ausgabe der <a href="https://de.wikipedia.org/wiki/Inprekorr" target="_blank">Inprekorr</a> (421); siehe auch
   <a href="https://www.findmittel.ch/archive/archNeu/Ar198_18.html" target="_blank">Kurzbiographie</a> im Katalog des Schweizerischen Sozialarchivs..</li>
   <li><a href="https://de.wikipedia.org/wiki/Richard_Schüller_(Parteifunktionär)" target="_blank"><strong>Schüller, Richard</strong></a> (1901-1957) 167, 191 <br />
   Österreichischer Kommunist; Mitarbeiter des Westeuropäischen Komitees
@@ -132,7 +132,8 @@ Schriftstellerkongresses zur Verteidigung der Kultur (500), siehe
   bis 1941 Mitglied des EKKI-Präsidiums (176).</li>
   <li><span id="senghor"></span><a href="https://de.wikipedia.org/wiki/Lamine_Senghor" target="_blank"><strong>Senghor, Lamine</strong></a> (1889–1927) 250, 252, 267, 269–274, 292 <br />
   Sengalesischer Kommunist; machte erste politische Schritte bei der
-  <em>Union Intercoloniale</em> (250) –  Redner auf dem »<a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus#Brüsseler_Kongress" target="_blank">Brüsseler Kongress</a> gegen koloniale Unterdrückung und Imperialismus« 1927 (247ff).</li>
+  <em>Union Intercoloniale</em> (250) –  Redner auf dem »<a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus#Brüsseler_Kongress" target="_blank">Brüsseler Kongress</a> gegen koloniale Unterdrückung und Imperialismus« 1927 (247ff) – Foto (269) – 
+  gründete 1926 das <em>Comité de Défense de la Race Nègre</em> (273).</li>
   <li><a href="https://de.wikipedia.org/wiki/Paul_Senn" target="_blank"><strong>Senn, Paul</strong></a>
   (1901–1953) 468 <br />
   Schweizer Fotograf; begleitete 1937 einen Hilfskonvoi des
@@ -182,7 +183,7 @@ Schriftstellerkongresses zur Verteidigung der Kultur (500), siehe
   Revolutionären Komitees mit ihrem Partner <a href="studerC#chatto">→Chatto</a>
   1921 nach Moskau um sich der Unterstützung der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> zu
   versichern (119) – <a href="studerR#roy">→Roy</a> schrieb seinen Konflikt mit Chatto
-  allein Agnes Semdley zu (206f) – Mitarbeiterin beim »<a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus#Brüsseler_Kongress" target="_blank">Brüsseler Kongress</a> gegen koloniale Unterdrückung und Imperialismus« 1927, beteiligte
+  allein Agnes Semdley zu (206f) – Mitarbeiterin beim »<a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus#Brüsseler_Kongress" target="_blank">Brüsseler Kongress</a> gegen koloniale Unterdrückung und Imperialismus« 1927 (264) – beteiligte
   sich an der Kampagne für die Freilassung der in China verhafteten
   Komintern-Funktionäre <a href="studerM#moiseenko">→Tatjana Moiseenko-Velikaja</a>
   und <a href="studerR#rudnik">→Jakov Rudnik</a>, hatte eine Liaison mit
@@ -378,10 +379,12 @@ Schriftstellerkongresses zur Verteidigung der Kultur (500), siehe
   64, 275–278 <br />
   Schweizer Kommunist; Mitglied des sozialistischen Jugendverbands der
   »Jungburschen«, die revolutionäre Schriften aus Deutschland in die
-  Schweiz schmuggelten (64f, 276) – arbeitete bei der <a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus" target="_blank">Liga gegen Imperialismus und für nationale Unabhängigkeit</a> (275ff)
+  Schweiz schmuggelten (64f, 276) – 
+  arbeitete bei der <a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus" target="_blank">Liga gegen Imperialismus und für nationale Unabhängigkeit</a> (275ff)
   – Gründungsmitglied der <a href="https://de.wikipedia.org/wiki/Kommunistische_Partei_der_Schweiz" target="_blank">KPS</a> (276) — heiratete die Tocher von
-  <a href="studerR#rühle">→Otto Rühle</a> (276) – als m4slink(M, münzenberg,
-  Münzenbergs) Vertreter in Mexiko, wo er über <a href="studerS#sandino">→Sandino</a> für die
+  <a href="studerR#rühle">→Otto Rühle</a> (276) – 
+  als <a href="studerM#münzenberg">→Münzenbergs</a> Vertreter in Mexiko, 
+  wo er über <a href="studerS#sandino">→Sandino</a> für die
   <a href="https://de.wikipedia.org/wiki/Arbeiter-Illustrierte-Zeitung" target="_blank"><em>AIZ</em></a> berichtete (276) – weigerte sich die Linie der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> in
   Mexiko durchzusetzen und wurde deshalb aus der KP Mexikos
   ausgeschlossen (278) - Sulzbachner etablierte sich in Mexiko und war
