--- a/studer/studerV.html
+++ b/studer/studerV.html
@@ -71,11 +71,11 @@
   Contreras« 30, 277, 278, 407, 437, 473, 489, 491–495, 506–508, 511,
   523–525, 533, 534, 537, 553 <br />
   Italienischer Kommunist; Gefährte von <a href="studerM#modotti">→Tina
-  Modotti</a> (30) – Abbildung (277) – äußerte sich stolz über seinen
+  Modotti</a> (30) – Foto (277) – äußerte sich stolz über seinen
   Erfolg bei der »Säuberung« der mexikanischen KP (278) – sollte das
   Westeuropäische Büro der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> in Paris reorganisieren (407,
   489) – im Auftrag der Komintern ab 1934 als Militärberater der <a href="https://de.wikipedia.org/wiki/Partido_Comunista_de_España" target="_blank">PCE</a>
-  in Spanien (473, 493ff) – Abbildung (491) - die Kaderkommission der
+  in Spanien (473, 493ff) – Foto (491) - die Kaderkommission der
   Komintern lehnte einen Orden für Vidali ab (506ff) – machte sich für
   die Verfolgung der »Trotzkisten« und »Anarquistas« in Spanien stark
   (511) – 1939 Flucht aus Spanien (523) über die USA nach Mexiko – es
