--- a/krimis/deaver.html
+++ b/krimis/deaver.html
@@ -71,7 +71,7 @@ ist ein amerikanischer Autor: <a href="https://www.jefferydeaver.com" target="_b
 
 <ul>
   <li>2019: <em>The Never Game</em></li>
-  <li>2020: <em>The Goodbye Man</em></li>
+  <li>2020: The Goodbye Man</li>
   <li>2021: The Final Twist</li>
 </ul>
 
