--- a/studer/studerH.html
+++ b/studer/studerH.html
@@ -35,8 +35,8 @@
 <ul>
   <li><a href="https://de.wikipedia.org/wiki/Messali_Hadj" target="_blank"><strong>Hadj, Messali</strong></a>
   (1898-1974) 250, 267 <br />
-  Algerisches Mitglied der <em>Union Intercoloniale</em>, Teilnehmer am
-  »<a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus#Brüsseler_Kongress" target="_blank">Brüsseler Kongress</a> gegen koloniale Unterdrückung und Imperialismus« 1927 der m4ligaimp.</li>
+  Algerischer Kommunist; Mitglied der <em>Union Intercoloniale</em> (250) –  Teilnehmer am
+  »<a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus#Brüsseler_Kongress" target="_blank">Brüsseler Kongress</a> gegen koloniale Unterdrückung und Imperialismus« 1927 (267).</li>
   <li><a href="https://de.wikipedia.org/wiki/Jakub_Ganezki" target="_blank"><strong>Hanecki, Jakub</strong></a>
   (1879–1937) 138 <br />
   Polnischer Kommunist; einer der Hauptfinanziers der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> (138).</li>
@@ -45,8 +45,8 @@
   <li><a href="https://en.wikipedia.org/wiki/George_Hardy_(communist)" target="_blank"><strong>Hardy, George</strong></a> (1884–1966) »George« 341 <br />
   Britischer Seemann und Gewerkschafter, im Auftrag der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> 1927 in China.</li>
   <li><a href="https://de.wikipedia.org/wiki/Mohammad_Hatta" target="_blank"><strong>Hatta, Mohammad</strong></a> 
-  (1902–1980)	 267 <br />
-  Indonesischer Politiker, Teilnehmer am »<a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus#Brüsseler_Kongress" target="_blank">Brüsseler Kongress</a> gegen koloniale Unterdrückung und Imperialismus« 1927.</li>
+  (1902–1980) 267 <br />
+  Indonesischer Politiker; Teilnehmer am »<a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus#Brüsseler_Kongress" target="_blank">Brüsseler Kongress</a> gegen koloniale Unterdrückung und Imperialismus« 1927 (267).</li>
   <li><a href="https://de.wikipedia.org/wiki/John_Heartfield" target="_blank"><strong>Heartfield, John</strong></a>
   (1891–1968) 221, 234, 367 <br />
   Deutscher Fotokünstler; steuerte Fotomontagen für die
